[package]
name = "electrs-query"
version = "0.1.0"
edition = "2021"
description = "Request information from an Electrs Server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-address = "0.1.5"
bitcoin-utils = "0.1.2"
electrs-request = "0.1.1"
hex-utilities = "0.1.5"
